@@ -11006,7 +11006,7 @@
   if (CONST_INT_P (operands[0])
       && INTVAL (operands[0]) >= 0 && INTVAL (operands[0]) <= 255)
     {
-      error ("Invalid transaction abort code: " HOST_WIDE_INT_PRINT_DEC
+      error ("invalid transaction abort code: " HOST_WIDE_INT_PRINT_DEC
 	     ".  Values in range 0 through 255 are reserved.",
 	     INTVAL (operands[0]));
       FAIL;
