@@ -1,3 +1,13 @@
+2017-01-18  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	* config/s390/s390-c.c (s390_expand_overloaded_builtin): Downcase
+	first letter of error messages.
+	(s390_resolve_overloaded_builtin): Likewise.
+	* config/s390/s390.c (s390_expand_builtin): Likewise.
+	(s390_invalid_arg_for_unprototyped_fn): Likewise.
+	(s390_valid_target_attribute_inner_p): Likewise.
+	* config/s390/s390.md ("tabort"): Likewise.
+
 2017-01-18  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.target/s390/target-attribute/tattr-2.c: Add -fno-ipa-icf
